--- a/package.json
+++ b/package.json
@@ -16,5 +16,10 @@
     "sharp": "^0.33.3",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.4.5"
+  },
+  "devDependencies": {
+    "@typescript-eslint/parser": "^7.8.0",
+    "eslint": "^9.2.0",
+    "eslint-plugin-astro": "^1.1.2"
   }
 }
